# thermostat

./: .gitignore  Cargo.toml  README.md  flake.nix  tmp.py  tmp2.py
doc/: PID tuning.md
pytec/: example.py  plot.py  test.py
pytec/pytec/: client.py
pythermostat/: MANIFEST.in  aioexample.py  autotune.py  example.py  plot.py  pyproject.toml  setup.py
pythermostat/pythermostat/: aioclient.py  autotune.py  client.py  control_panel.py  plot.py  test.py  thermostat_qt.py
pythermostat/pythermostat/gui/model/: pid_autotuner.py  property.py  thermostat.py
pythermostat/pythermostat/gui/view/: MainWindow.ui  connection_details_menu.py  ctrl_panel.py  info_box.py  live_plot_view.py  menus.py  net_settings_input_diag.py  param_tree.json  waitingspinnerwidget.py  zero_limits_warning_view.py
src/: ad5680.rs  b_parameter.rs  channel.rs  channel_state.rs  channels.rs  command_handler.rs  command_parser.rs  config.rs  dfu.rs  fan_ctrl.rs  flash_store.rs  hw_rev.rs  init_log.rs  leds.rs  main.rs  net.rs  pid.rs  pins.rs  server.rs  session.rs  steinhart_hart.rs  timer.rs  usb.rs
src/ad7172/: adc.rs  checksum.rs  mod.rs  regs.rs
