[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pythermostat"
version = "0.0"
authors = [{name = "M-Labs"}]
description = "Python utilities for the Sinara 8451 Thermostat"
urls.Repository = "https://git.m-labs.hk/M-Labs/thermostat"
license = {text = "GPLv3"}
dependencies = [
    "numpy >= 1.26.4",
    "matplotlib >= 3.8.4",
    "pyqtgraph >= 0.13.7",
    "pyqt6 >= 6.7.0",
    "qasync >= 0.27.1",
    "pglive >= 0.7.2",
]

[project.gui-scripts]
thermostat_plot = "pythermostat.plot:main"
thermostat_control_panel = "pythermostat.control_panel:main"

[project.scripts]
thermostat_autotune = "pythermostat.autotune:main"
thermostat_test = "pythermostat.test:main"
